apps/services/media/example/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`example.local.vulf.haus`)
      kind: Rule
      services:
        - name: example
          port: 80

  tls:
    secretName: example-tls-prod
